# Graph

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/datasets/: right_tunnel_exit_vpvs.json
docs/: GUI_QUICKSTART.md  USER_GUIDE.md
scripts/: preprocess.py  run_gui.py  validate.py
src/tunnel_geology_model/: __init__.py  classification.py  coupling.py  cross_section.py  export.py  isosurface.py  model.py  statistics.py  tunnel.py
src/tunnel_geology_ui/: __init__.py  main_window.py  tasks.py
src/tunnel_geology_ui/dialogs/: export_dialog.py  import_dialog.py
src/tunnel_geology_ui/panels/: data_panel.py  info_panel.py  property_panel.py  slice_panel.py  tunnel_panel.py
src/tunnel_geology_ui/widgets/: render_widget.py
src/tunnel_velocity_model/: __init__.py  cli.py  config.py  pipeline.py  validation.py
tests/: e2e_test.py  e2e_tunnel.py  test_classification.py  test_cli.py  test_config.py  test_coupling.py  test_cross_section.py  test_export.py  test_isosurface.py  test_model.py  test_tunnel.py
出口右线Dyk1252+411-VpVs/: 出口右线Dyk1252+411-Vp.csv  出口右线Dyk1252+411-Vs.csv
出口右线Dyk1252+411-VpVs/preprocessed/: preprocess.py  validate.py
