[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-velocity-model"
version = "0.1.0"
description = "Reproducible preprocessing pipeline for tunnel seismic velocity models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "xarray",
  "h5netcdf",
  "h5py",
  "pyvista>=0.43",
  "scikit-image",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
gui = ["pyside6>=6.6", "matplotlib>=3.8"]

[project.scripts]
tunnel-velocity-model = "tunnel_velocity_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
